test/spec_vectors/exports/ok/module_47.wat
(module (table (export "a") 0 funcref))